k8s/mutatingwebhook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: reverse-proxy-hcloud-webhook
  name: reverse-proxy-hcloud-webhook
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reverse-proxy-hcloud-webhook
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reverse-proxy-hcloud-webhook
    spec:
      containers:
      - env:
        - name: TLS
          value: "true"
        - name: LOG_LEVEL
          value: trace
        - name: LOG_JSON
          value: "false"
        image: ghcr.io/23technologies/mutating-webhook-envvar:v0.0.1
        imagePullPolicy: Always
        name: reverse-proxy-hcloud-webhook
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        args:
          - "HCLOUD_ENDPOINT"
          - "https://api.hetzner.monitoring.23t-prod.okeanos.dev/v1"
        command: 
          - /usr/local/bin/admission-webhook
        volumeMounts:
        - mountPath: /etc/admission-webhook/tls
          name: tls
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: acme.com/lifespan-remaining
        operator: Exists
      volumes:
      - name: tls
        secret:
          defaultMode: 420
          secretName: reverse-proxy-hcloud-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reverse-proxy-hcloud-webhook
  name: reverse-proxy-hcloud-webhook
  namespace: default
spec:
  ports:
    - port: 443
  selector:
    app: reverse-proxy-hcloud-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: simple-kubernetes-webhook.acme.com
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVWk5IanJhOFY0YUJxUTYrY2hrdFYzSXFYdjY0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd01URUxNQWtHQTFVRUJoTUNRVlV4SWpBZ0JnTlZCQU1NR1hOcGJYQnNaUzFyZFdKbGNtNWxkR1Z6TFhkbApZbWh2YjJzd0hoY05Nakl4TVRFME1qQXpPVEV6V2hjTk1qTXhNVEUwTWpBek9URXpXakF4TVFzd0NRWURWUVFHCkV3SkJWVEVpTUNBR0ExVUVBd3daYzJsdGNHeGxMV3QxWW1WeWJtVjBaWE10ZDJWaWFHOXZhekNDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2xFc245d3ptend3RkJUM201QVgvbm42SUtsUHFycApHV1J2ZDA1OXpZVG [...]
    service:
      name: reverse-proxy-hcloud-webhook
      namespace: default
      path: /mutate-pods
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: simple-kubernetes-webhook.acme.com
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 2
